SD-1657: Change partially conformant icon and refactor implementation